# Prostatecare

./: .env  DEPLOY_README.md  Dockerfile  adverse_events.py  ai_prediction.py  ai_prediction_forms.py  app.cgi  app.py  app.yaml  cloudbuild.yaml  cookies.txt  cpanel_deployment_guide.md  cpanel_terminal_deploy.md  cpanel_troubleshooting.md  create_admin_user.py  deploy_guide.md  docker-compose.yml  env  followup_forms.py  followup_management.py  forms.py  gemini_ai.py  lab_integration.py  models.py  pdf_generator.py  production_config.py  pyproject.toml  replit.md  requirements_cpanel.txt  routes.py  run_production.py  translations.py  treatment_forms.py  wsgi.py
static/css/: responsive-charts.css  style.css
static/js/: charts.js  responsive-charts.js
templates/: 404.html  500.html  admin_clear_data.html  appointment_form.html  appointment_list.html  base.html  blood_test_form.html  blood_test_import.html  blood_tests_list.html  change_password.html  dashboard.html  event_form.html  excel_import.html  imaging_form.html  imaging_list.html  import_blood_tests.html  lab_integration_dashboard.html  login.html  medication_form.html  medication_schedule_form.html  medication_schedule_list.html  medications_list.html  patient_appointments.html  patient_delete_confirm.html  patient_detail.html  patient_form.html  patient_lab_config.html  patient_lab_import.html  patient_list.html  patient_onboarding_wizard.html  smart_appointment_form.html  treatment_form.html  treatment_timeline.html  user_form.html  user_list.html
templates/ai_predictions/: adt_prediction.html  (+4 more)
(+6 files in other folders)
